--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
 		"socket.io",
 		"video"
 	],
-	"author": "Vasanth.V <imvasanthv@gmail.com>",
+	"author": "ONE2SIX <one2six@gmail.com>",
 	"license": "ISC",
 	"bugs": {
 		"url": "https://github.com//issues"
